--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            .body {
+                background-color: gray;
+            }
+        </style>
     </head>
-    <body>
+    <body class="body">
+        <button id="btn1">Rock</button>
+        <button id="btn2">Scissors</button>
+        <button id="btn3">Paper</button>
         <script src="main.js"></script>
     </body>
 </html>
