--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <button id="btn1">Rock</button>
         <button id="btn2">Scissors</button>
         <button id="btn3">Paper</button>
+        <div class="result"></div>
+        <div>
+            Победы игрока:
+            <a class="people"></a>
+            , Победы компьютера:
+            <a class="comp"></a>
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
